# autonomous_drones_22

./: README.md
autonomous_drones_ws/: executable.sh  rviz_config.rviz
autonomous_drones_ws/.catkin_tools/profiles/default/: devel_collisions.txt
autonomous_drones_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
autonomous_drones_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh  setup.sh
autonomous_drones_ws/devel/.private/controller_pkg/: .catkin  local_setup.sh
autonomous_drones_ws/devel/.private/fla_msgs/: .catkin  .rosinstall  local_setup.sh
autonomous_drones_ws/devel/.private/fla_utils/: .catkin  .rosinstall
autonomous_drones_ws/devel/.private/mav_comm/: .catkin  local_setup.sh  setup.sh
autonomous_drones_ws/devel/.private/mav_msgs/: .catkin  .rosinstall  local_setup.sh
autonomous_drones_ws/devel/.private/mav_planning_msgs/: .catkin
autonomous_drones_ws/devel/.private/mav_state_machine_msgs/: .catkin  .rosinstall  local_setup.sh  setup.sh
autonomous_drones_ws/devel/.private/mav_system_msgs/: .catkin  local_setup.sh  setup.sh
autonomous_drones_ws/devel/.private/nav_msgs/: .catkin  .rosinstall
autonomous_drones_ws/devel/.private/planning_pkg/: .catkin  local_setup.sh  setup.sh
autonomous_drones_ws/devel/.private/simulation/: .catkin  .rosinstall  setup.sh
autonomous_drones_ws/devel/.private/state_machine/: .catkin  .rosinstall  local_setup.sh  setup.sh
autonomous_drones_ws/devel/include/fla_msgs/: Box.h  ControlMessage.h  Detection.h  JoyDef.h  (+12 more)
autonomous_drones_ws/logs/simulation/: build.make.000.log.stderr  build.make.001.log.stderr
autonomous_drones_ws/src/controller_pkg/: CMakeLists.txt
autonomous_drones_ws/src/planning_pkg/: CMakeLists.txt  package.xml
autonomous_drones_ws/src/planning_pkg/cfg/drone_1/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
autonomous_drones_ws/src/planning_pkg/cfg/drone_2/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
autonomous_drones_ws/src/planning_pkg/include/: point_cloud_converter.h  pointcloud_merger.h
autonomous_drones_ws/src/planning_pkg/src/: map_service.cpp  point_cloud_converter.cc  pointcloud_merger.cpp
autonomous_drones_ws/src/simulation/: CMakeLists.txt
autonomous_drones_ws/src/state_machine/: CMakeLists.txt
autonomous_drones_ws/src/state_machine/include/: state_machine.h
autonomous_drones_ws/src/state_machine/src/: state_machine.cc
(+573 files in other folders)
